# WP_Spring_1405

./: .dockerignore  .gitignore  .prettierignore  Dockerfile.frontend  README.md  docker-compose.yml  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts  vitest.setup.ts
app/: globals.css  (+2 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  conftest.py  entrypoint.sh  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/management/commands/: seed.py
backend/accounts/migrations/: 0001_initial.py
backend/analytics/: admin.py  models.py  recommendations.py  serializers.py  services.py  urls.py  views.py
backend/analytics/migrations/: 0001_initial.py
backend/billing/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/billing/gateways/: __init__.py  base.py  mock.py  zarinpal.py
backend/billing/migrations/: 0001_initial.py
backend/catalog/: models.py  serializers.py  services.py  urls.py  views.py
backend/catalog/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/core/: exceptions.py  models.py  permissions.py  tiers.py
backend/engagement/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/engagement/migrations/: 0001_initial.py
backend/support/: models.py  serializers.py  urls.py  views.py
backend/support/migrations/: 0001_initial.py
backend/tests/: test_analytics.py  test_auth.py  test_billing.py  test_catalog.py  test_engagement.py
(+100 files in other folders)
