[project]
name = "nava-backend"
version = "0.1.0"
description = "Nava — Django/DRF backend (phase 2) for the Sharif Web Programming project"
requires-python = ">=3.12,<3.14"
dependencies = [
    "django>=5.1,<5.3",
    "djangorestframework>=3.15",
    "djangorestframework-camel-case>=1.4",
    "drf-spectacular>=0.27",
    "mutagen>=1.47",
    "pillow>=10.4",
    "requests>=2.32",
    "environs>=11.0",
    "gunicorn>=22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "tests.py"]

[tool.uv]
package = false
